<resources>
    <string name="app_name">Maridaje y Vinos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Buscar</string>

    <string name="app_slogan">La combinación perfecta</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_wine">Vinos</string>
    <string name="nav_food">Comida</string>
    <string name="nav_share">Compartir aplicación</string>
    <string name="nav_settings">Configuración</string>
    <string name="nav_help">Ayuda</string>
    <string name="title_activity_categorys">CategorysActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="todo">TODO</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="send_to">Compartir esta app con</string>
    <string name="share_text">Hola, descarga esta super app...</string>
    <string name="food_cat_title">¿Qué va a comer?</string>
    <string name="foods">Comidas</string>
    <string name="search_title">Búsqueda</string>
    <string name="wine_cat_title">¿Qué vino tomará?</string>
    <string name="wine">Vino</string>
    <string name="wine_per_food_title">Se recomienda con los siguientes vinos:</string>

    <!-- Strings para el slide de ayuda -->
    <string name="next">SIGUIENTE</string>
    <string name="skip">OMITIR</string>
    <string name="start">EMPEZAR</string>

    <string name="slide_1_title">El mejor maridaje</string>
    <string name="slide_1_desc">Logre combinar de manera efectiva un vino con una comida, sin ser un experto.</string>

    <string name="slide_2_title">Si ya tengo un vino</string>
    <string name="slide_2_desc">Elija la primera opción del menú y de acuerdo al vino que tenga le proporcionaremos opciones de comida que va a ir perfecto para lograr el maridaje.</string>

    <string name="slide_3_title">Si sé qué voy a comer</string>
    <string name="slide_3_desc">Si tiene en mente la comida que quiere disfrutar, elija la segunda opción del menú y le recomendaremos vinos con los que logrará el maridaje.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="wine_detail_subtitle">Este vino se recomienda con:</string>
    <string name="main_menu_wine">Tengo un vino</string>
    <string name="main_menu_food">Tengo una comida</string>
    <string name="SHARE_TEXT">Instala esta gran aplicación! https://bit.ly/2GEGa8V</string>
</resources>
