<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/nav_home" />
            <item
                android:id="@+id/nav_wine"
                android:icon="@drawable/ic_local_bar_black"
                android:title="@string/nav_wine" />
            <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_restaurant_menu_black"
                android:title="@string/nav_food" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black"
                android:title="@string/nav_help" />
    </group>

</menu>
